Commented out CSS for sidebar, edits for scrollbar fix

--- a/src/static/css/chat_room.css
+++ b/src/static/css/chat_room.css
@@ -4,14 +4,15 @@
 	text-align:right;
 }
 #chat_div {
-	margin-left:auto;
-	margin-right:auto;
-	width:100%;
+	margin-left: 20%;
+	margin-right: 20%;
+	width: 60%;
+	float: left;
 }
 #msg_list {
 	border:1px solid black;
 	height:250px;
-	overflow-y:auto;
+	overflow-y: scroll;
 	resize:vertical;
 	padding:7px;
 }
