--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -5,7 +5,7 @@ h1 {
 	margin-right:auto;
 	text-align:center;
 }
-#sidebar {
+/*#sidebar {
 	position:fixed;
 	top:40px;
 	left:0px;
@@ -16,12 +16,14 @@ h1 {
 	text-align:center;
 	padding-top:5px;
 	transition: width .5s;
-}
+} */
 #main {
-	margin-left:250px;
-	margin-top:40px;
-	height:100%;
+	/*margin-left:250px;
+	margin-top:40px;*/
+	height: 100vh;
+	width: 100vw;
 	transition: margin .5s;
+	float: left;
 }
 #navbar {
 	position:fixed;
@@ -45,8 +47,9 @@ h1 {
 #menu_header {
 	margin:0px;
 	height:30px;
-	font-size:18px;
+	font-size:32px;
 	font-weight:bold;
+	text-wrap: auto;
 }
 #menu_toggle {
 	margin-top:5px;
